@@ -7,6 +7,8 @@ Revision history for {{ $dist->name }}
   [Bug Fixes]
   - Use "timestamp" type instead of "datetime" type for various DateTime-like objects.
 
+  - column_info_from_type will use internally configured types before guessing about the type.
+
 v0.5.0    2022-04-21 17:13:34+01:00 Europe/London
   [Incompatibilies]
   - Support for Perls before v5.10 has been removed.
